--- a/TESTING/Statistics-Page/statistics.css
+++ b/TESTING/Statistics-Page/statistics.css
@@ -157,21 +157,11 @@ body {
 }
 
 .menu > div > div > ul > li > a:hover{
-    display: inline-block;
-    padding: .8rem 3rem;
-    border: .2rem solid gray; 
+    border: solid 0.1em gray;
+    padding: 0.8rem 2rem ;
+    border-radius: 0.2em;
+    background-color: black;
     color: white;
-    cursor: pointer;
-    font-size: 30px;
-    border-radius: 3rem;
-    position: relative;
-    overflow: hidden;
-    z-index: 0;
-    margin-top: 1rem;
-    margin-bottom: 10px;
-    letter-spacing: 4px;
-    background: gray;
-    transition: .3s linear;
 }
 
 .toggler:checked ~ .menu{
@@ -224,53 +214,21 @@ body {
 
 .home-content h2{
 	color: white;
-	font-family: "Dancing Script", cursive;
-	font-size: 100px;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	font-size: 75px;
 	margin-bottom: 0.8rem;
 }
 
 .home-content p{
 	color: white;
-	font-size: 35px;
+	font-size: 25px;
 	font-weight: 100;
     margin-bottom: 0.75rem;
 }
 
-.home-container a {
-    display: inline-block;
-    padding: .8rem 3rem;
-    border: .2rem solid gray;
-    color: gray;
-    cursor: pointer;
-    font-size: 1.7rem;
-    border-radius: 3rem;
-    position: relative;
-    overflow: hidden;
-    z-index: 0;
-    margin-top: 1rem;
-    margin-bottom: 10px;
+.home-content #scroll-down {
+    font-size: small;
 }
-
-.home-container a::before{
-    content: ' ';
-    position: absolute;
-    top: 0; right: 0;
-    width: 0%;
-    height: 100%;
-    background: gray;
-    transition: .3s linear;
-    z-index: -1;
-}
-
-.home-container a:hover::before {
-    width: 100%;
-    left: 0;
-}
-
-.home-container a:hover{
-    color: #fff;
-}
-
 /* Home Page Ends */
 
 /* Information Page Starts */
@@ -296,27 +254,63 @@ body {
 
 
 .section1 {
-    background: url(../images/statistics-background1.jpeg);
-    background-size: cover;
+    position: relative;
+	height: 100vh;
+	width: 100vw;
+	background: 
+    url("../images/statistics-background1.jpeg") no-repeat;
+	background-size: cover;
 	background-position: 50% 36%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
 
 .section2 {
-    background: url(../images/statisics-background2.jpeg);
-    background-size: cover;
+    position: relative;
+	height: 100vh;
+	width: 100vw;
+	background: 
+    url("../images/statisics-background2.jpeg") no-repeat;
+	background-size: cover;
 	background-position: 50% 36%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
 
 .section3 {
-    background: url(../images/statistics-background3.jpeg);
-    background-size: cover;
+    position: relative;
+	height: 100vh;
+	width: 100vw;
+	background: 
+    url("../images/statistics-background3.jpeg") no-repeat;
+	background-size: cover;
 	background-position: 50% 36%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
 
 .section4 {
-    background: url(../images/statistics-background4.jpeg);
-    background-size: cover;
+    position: relative;
+	height: 100vh;
+	width: 100vw;
+	background: 
+    url("../images/statistics-background4.jpeg") no-repeat;
+	background-size: cover;
 	background-position: 50% 36%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
 .container {
     position: relative;
@@ -438,3 +432,124 @@ body {
 
 
 /* Media Queries Start */
+
+@media (max-width:1120px) {
+    .container {
+        font-size: 100%;
+    }
+
+    .content .text-box {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(40px);
+        padding: 30px;
+        max-width: 300px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 8px;
+        transform: translate(-75px, 45px);
+        margin-left: 37.5px;
+    }
+    .content .image {
+        position: relative;
+        width: 700px;
+        height: 400px;
+        overflow: hidden;
+    }
+}
+
+@media (max-width:1072px) {
+    .container {
+        font-size: 85%;
+    }
+
+    .content .text-box {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(40px);
+        padding: 30px;
+        max-width: 350px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 8px;
+        transform: translate(-60px, 35px);
+        margin-left: 25px;
+    }
+    .content .image {
+        position: relative;
+        width: 625px;
+        height: 375px;
+        overflow: hidden;
+    }
+}
+
+@media (max-width:981px) {
+    .container {
+        font-size: 85%;
+    }
+
+    .content .text-box {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(40px);
+        padding: 25px;
+        max-width: 300px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 8px;
+        transform: translate(-60px, 35px);
+        margin-left: 25px;
+    }
+    .content .image {
+        position: relative;
+        width: 600px;
+        height: 350px;
+        overflow: hidden;
+    }
+}
+
+@media (max-width:765px) {
+    .container {
+        font-size: 70%;
+    }
+
+    .content .text-box {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(40px);
+        padding: 30px;
+        max-width: 300px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 8px;
+        transform: translate(-60px, 25px);
+        margin-left: 25px;
+    }
+    .content .image {
+        position: relative;
+        width: 375px;
+        height: 300px;
+        overflow: hidden;
+    }
+}
+
+@media (max-width:450px) {
+    .text-box {
+        font-size: 50%;
+    }
+
+    .content .text-box {
+        background: rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(40px);
+        padding: 10px;
+        max-width: 150px;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 8px;
+        transform: translate(-70px, 1px);
+        margin-left: 50px;
+    }
+
+    .content .image {
+        margin-left: 50px;
+        position: relative;
+        width: 250px;
+        height: 170px;
+        overflow: hidden;
+    }
+
+    h2 {
+        font-size: 100%;
+    }
+}
