--- a/TESTING/Statistics-Page/statistics.css
+++ b/TESTING/Statistics-Page/statistics.css
@@ -8,7 +8,6 @@
     outline: none;
     border: none;
     text-decoration: none;
-    text-transform: capitalize;
     transition: all .2s linear;
 }
 *::selection {
@@ -22,13 +21,13 @@ html {
 }
 
 body {
-    background: #243c74;
     overflow: hidden;
     display: flex;
     min-height: 100vh;
-    flex-direction: column;
     margin: 0;
     padding: 0;
+    background: black;
+    animation: transitionIn 2s;
 }
 
 /* Hamburger menu start */
@@ -178,10 +177,6 @@ body {
 
 /* Hamburger Menu End */
 
-/* Home Page Starts */
-
-/* Home Page Ends */
-
 /* Information Page Starts */
 .slider {
     width: 100%;
@@ -253,7 +248,7 @@ body {
 }
 
 .slider .wrapper .left > div p {
-    color: #555;
+    color: black;
     font-size: 18px;
 }
 
@@ -280,12 +275,14 @@ body {
     opacity: 0;
     transition: all 4s;
     background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(40px);
-    padding: 40px;
+    backdrop-filter: blur(50px);
+    padding: 30px;
+    font-size: 40px;
     border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 10px;
+    border-radius: 30px;
     transform: translate(-100px, 60px);
     margin-left: 103px;
+    display: flex;
 }
 
 .show2 {
@@ -363,6 +360,32 @@ body {
     background-position: 50% 36%;
 }
 
+.section-title {
+    transition: all 4s;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(40px);
+    padding: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 30px;
+    transform: translate(-100px, 60px);
+    margin-left: 103px;
+    color: white;
+}
+
+@keyframes transitionIn {
+    from {
+        opacity: 0;
+        transform: rotateX(-10deg);
+    }
+
+    to {
+        opacity: 1;
+        transform: rotateX(0);
+    }
+}
+
+
+
 /* Information Page Ends */
 
 
@@ -370,4 +393,3 @@ body {
 
 
 /* Media Queries Start */
-
