--- a/OFFICIAL/Statistics-Page/statistics.css
+++ b/OFFICIAL/Statistics-Page/statistics.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
-:root{
-    --red: #ff3838;
-}
 
 * {
     font-family: 'Montserrat', sans-serif;
@@ -11,12 +8,10 @@
     outline: none;
     border: none;
     text-decoration: none;
-    text-transform: capitalize;
     transition: all .2s linear;
 }
 *::selection {
-    background: var(--red);
-    color: #fff;;
+    color: black;
 }
 
 html {
@@ -26,229 +21,375 @@ html {
 }
 
 body {
-    background: #082032;
-}
-
-section {
-    padding: 2rem 9%;
-}
-
-header {
-    font-size: 62.5%;
-    margin-top: none;
-    top: 0; left: 0;
-    right: 0;
-    z-index: 1000;
+    overflow: hidden;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: #082032;
-    padding: 2rem 9%;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    background: black;
+    animation: transitionIn 2s;
 }
 
-header .navbar a{
-    font-size: 1.25rem;
-    margin-left: 2rem;
-    color: #666;
+/* Hamburger menu start */
+.menu-wrap{
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 2;
 }
 
-header .navbar a:hover{
-    color: black;
+.toggler{
+	position: absolute;
+	top: 0.5rem;
+	left: 0.5rem;
+	width: 60px;
+	height: 60px;
+	z-index: 3;
+	opacity: 0;
+	cursor: pointer;
 }
 
-#menu-bar {
-    font-size: 3rem;
-    cursor: pointer;
-    color: #666;
-    border:.1rem solid #666;
-    border-radius: .3rem;
-    padding:.5rem 1.5rem;
-    display: none;
+.hamburger{
+	position: absolute;
+	top: 0.5rem;
+	left: 0.5rem;
+	width: 60px;
+	height: 60px;
+	z-index: 2;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50%;
 }
 
-.logo {
-    height: 100;
-    width: auto;
+.hamburger>div{
+	position: absolute;
+	width: 60%;
+	height: 3px;
+	border-radius: 1.5px;
+	background-color: white;
+	transition: .4s;
 }
- /* Scroll Animation Reveal Starts */
 
-section {
-    position: relative;
+.hamburger>div:before{
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 3px;
+	border-radius: 1.5px;
+	background-color: white;
+	top: -10px;
+	left: 0;
+	transition: .4s;
+}
+
+.hamburger>div:after{
+	content: '';
+	width: 100%;
+	height: 3px;
+	border-radius: 1.5px;
+	background-color: white;
+	top: 10px;
+	left: 0;
+	transition: .4s;
+}
+
+.toggler:checked + .hamburger>div{
+	transform: rotate(135deg);
+}
+
+.toggler:checked:hover + .hamburger>div{
+	transform: rotate(225deg);
+}
+
+.toggler:checked + .hamburger>div:before, .toggler:checked + .hamburger>div:after{
+	top: 0;
+	transform: rotate(90deg);
+}
+
+.menu{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	visibility: hidden;
+	transition: .6s;
+}
+
+.menu > div{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-150%);
+    width: 1600px;
+    height: 1600px;
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 80px 100px;
+    text-align: center;
+    transition: .6s;
+    font-size: 25px;
+}
+
+.menu > div > div{
+	max-width: 90vw;
+	max-height: 100vh;
+	opacity: 0;
+	transition: .6s;
+}
+
+.menu > div > div > ul > li{
+	list-style: none;
+}
+
+.menu > div > div > ul > li > a{
+	text-decoration: none;
+	color: #fff;
+	font-weight: 550;
+	text-transform: uppercase;
+	margin: .75rem;
+	transition: .3s;
+	font-size: 30px;
+	display: inline-block;
+}
+
+.menu > div > div > ul > li > a:hover{
+    border: solid 0.1em gray;
+    padding: 0.8rem 2rem ;
+    border-radius: 0.2em;
+    background-color: black;
+    color: white;
+}
+
+.toggler:checked ~ .menu{
+	visibility: visible;
+}
+
+.toggler:checked ~ .menu > div{
+	transform: translateX(-50%) translateY(-50%);
+}
+
+.toggler:checked ~ .menu > div > div{
+	opacity: 1;
+}
+
+/* Hamburger Menu End */
+
+/* Information Page Starts */
+.slider {
+    width: 100%;
+    height: 100vh;
+}
+
+.slider .controls {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 100px;
+}
+
+.slider .controls > div {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.slider .controls > .up {
+    top: 0px;
+    right: 0px;
+    background: #fff;
+    color: #111;
+}
+
+.slider .controls > .down {
+    bottom: 0px;
+    left: 0px;
+    background: #111;
     color: #fff;
 }
 
-.container {
-    position: relative;
+.slider .wrapper {
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
 
-.main-title {
-    font-size: 4em;
-    margin-bottom: 50px;
-}
-
-.content {
-    position: relative;
-    width: 1150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.content .image {
-    position: relative;
-    width: 800px;
-    height: 400px;
+.slider .wrapper .left, 
+.slider .wrapper .right {
+    width: 50%;
     overflow: hidden;
 }
 
-.content .image img {
-    z-index: 111;
-    position: absolute;
-    top: 0;
-    left: 0;
+.slider .wrapper .left > div,
+.slider .wrapper .right > div {
     width: 100%;
     height: 100%;
+    transition: all 500ms ease-in-out;
+}
+
+.slider .wrapper .left > div {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0px 100px 0px 50px;
+}
+
+.slider .wrapper .left > div h2 {
+    font-size: 50px;
+    margin-bottom: 10px;
+}
+
+.slider .wrapper .left > div p {
+    color: black;
+    font-size: 18px;
+}
+
+.slider .wrapper .right > div img{
     object-fit: cover;
-    border-radius: 10px;
-}
-
-.content .text-box {
-    z-index: 222;
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(40px);
-    padding: 40px;
-    max-width: 400px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 10px;
-    transform: translate(-100px, 60px);
-    margin-left: -30px;
-}
-
-.content .text-box h3 {
-    font-size:2em;
-    margin-bottom: 10px;
-}
-
-.section-title {
-    font-size: 3em;
-    margin-bottom: 80px;
-}
-
-.info-title {
-    font-size: 1.8em;
-    margin-bottom: 10px;
-}
-
-.info {
-    width: 700px;
-    margin-left: 50px;
-}
-
-
-
-/* Scroll Animation Reveal Ends */
-
-/* Footer */
-
-.footer {
+    height: 100%;
     width: 100%;
-    padding: 100px 15%;
-    background: #333;
-    color: #efefef;
+}
+
+.slider .wrapper .right div:nth-child(1) {
+    margin-top: -400vh;
+}
+
+.section-title{
+    opacity: 0;
+    transition: all 3s ;
+}
+
+.show1 {
+    opacity: 1;
+}
+
+.text {
+    opacity: 0;
+    transition: all 4s;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(50px);
+    padding: 30px;
+    font-size: 40px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 30px;
+    transform: translate(-100px, 60px);
+    margin-left: 103px;
     display: flex;
 }
 
-.footer div {
-    text-align: center;
-}
-.col-2 {
-    flex-grow: 2;
+.show2 {
+    opacity: 1;
 }
 
-.footer div h3 {
-    font-weight: 300;
-    margin-bottom: 30px;
-    letter-spacing: 1px;
+.show1, .show2, .show3 {
+    animation: blur 2s;
 }
 
-.col-1 a {
-    display: block;
-    text-decoration: none;
-    color: #efefef;
-    margin: 10px;
+@keyframes blur {
+    0% {
+        filter: blur(20px);
+    }
+    50% {
+        filter: blur(10px);
+    }
+    100% {
+        filter: blur(0px);
+    }
 }
 
-form input {
-    width: 400px;
-    height: 45px;
-    border-radius: 4px;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 40px;
-    outline: none;
-    border: none;
+.first {
+    background: 
+    linear-gradient(
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    ),
+    url(../images/statistics-background1.jpeg) no-repeat;
+    background-size: cover;
+    background-position: 50% 36%;
 }
 
-form button {
-    background: transparent;
-    border: 2px solid #fff;
-    color: #fff;
+.second {
+    background:
+    linear-gradient(
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    ), 
+    url(../images/statisics-background2.jpeg) no-repeat;
+    background-size: cover;
+    background-position: 50% 36%;
+}
+
+.third {
+    background:
+    linear-gradient(
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    ),
+    url(../images/statistics-background3.jpeg) no-repeat;
+    background-size: cover;
+    background-position: 50% 36%;
+}
+
+.fourth {
+    background: 
+    linear-gradient(
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    ),
+    url(../images/statistics-background4.jpeg) no-repeat;
+    background-size: cover;
+    background-position: 50% 36%;
+}
+
+.fifth {
+    background: 
+    linear-gradient(
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    ),
+    url(../images/statistics-background5.jpeg) no-repeat;
+    background-size: cover;
+    background-position: 50% 36%;
+}
+
+.section-title {
+    transition: all 4s;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(40px);
+    padding: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 30px;
-    padding: 10px 30px;
-    font-size: 15px;
-    cursor: pointer;
+    transform: translate(-100px, 60px);
+    margin-left: 103px;
+    color: white;
 }
 
-.col-1, .col-2, .col-3 h3 {
-    font-size: 23px;
-}
+@keyframes transitionIn {
+    from {
+        opacity: 0;
+        transform: rotateX(-10deg);
+    }
 
-.col-3 p {
-    text-transform: lowercase;
-    background-color: transparent;
-    font-size: 23px;
-}
-
-#github-social {
-    margin-top: 15px;
-} #github-social i {
-    font-size: 22px;
-    margin: 10px;
-    cursor: pointer;
-}
-
-#email-social {
-    margin-top: 15px;
-} #email-social i {
-    font-size: 22px;
-    margin: 10px;
-    cursor: pointer;
-}
-
-#instagram-social {
-    margin-top: 15px;
-} #instagram-social i {
-    font-size: 12px;
-    margin: 5px;
-    cursor: pointer;
-}
-
-#spotify-social {
-    margin-top: 15px;
-} #spotify-social i {
-    font-size: 22px;
-    margin: 10px;
-    cursor: pointer;
+    to {
+        opacity: 1;
+        transform: rotateX(0);
+    }
 }
 
 
-/* Media Queries */
+
+/* Information Page Ends */
+
+
+
+
+
+/* Media Queries Start */
