--- a/TESTING/Statistics-Page/statistics.css
+++ b/TESTING/Statistics-Page/statistics.css
@@ -280,9 +280,8 @@ body {
     font-size: 40px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 30px;
-    transform: translate(-100px, 30px);
-    margin-left: 103px;
-    position: absolute;
+    transform: translate(2px, 10px);
+    margin-left: 10px;
 }
 
 .show2 {
@@ -367,8 +366,8 @@ body {
     padding: 20px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 30px;
-    transform: translate(-100px, -200px);
-    margin-left: 103px;
+    transform: translate(5px, 1px);
+    margin-left: 10px;
     color: white;
 }
 
@@ -386,7 +385,7 @@ body {
 
 .information h6 {
     position: relative;
-    transform: translate(5.86%, 300%);
+    transform: translate(44px, -10px);
 }
 
 .information {
@@ -426,7 +425,9 @@ body {
 
 .intro-sec2 h2 {
     color: white;
-    transform: translate(250px, 300px);
+    text-align: left;
+    align-items: left;
+    justify-content: left;
 }
 
 .intro-sec2 h4 {
@@ -437,6 +438,12 @@ body {
 .intro-sec h2 {
     color: white;
     margin-left: 30em;
+}
+
+.intro-sec2 {
+   justify-content: left;
+   align-items: left;
+   text-align: left;
 }
 
 /* Intro Ends */
@@ -473,9 +480,9 @@ body {
 
 /* Media Queries Start */
 
-@media (max-width:1221px) {
+@media (min-width:1120px) and (max-width:1221px) {
     .slider .controls {
-        transform: translate(35.01em, 430px);
+        transform: translate(35em, 430px);
         top: 50%;
         left: 50%;
         width: 100px;
@@ -488,6 +495,7 @@ body {
         justify-content: left;
         transform: translateX(-200px);
     }
+
 }
 @media (max-width:1120px) {
     .intro-sec2 {
@@ -505,7 +513,7 @@ body {
     }
 
     .slider .controls {
-        transform: translate(60em, 430px);
+        transform: translate(30em, 600px);
         top: 50%;
         left: 50%;
         width: 100px;
@@ -523,7 +531,7 @@ body {
 
 @media (max-width:1024px) {
     .slider .controls {
-        transform: translate(50em, 430px);
+        transform: translate(28em, 600px);
         top: 50%;
         left: 50%;
         width: 100px;
@@ -533,17 +541,40 @@ body {
 
 @media (max-width: 800px) {
     .slider .controls {
-        transform: translate(40em, 430px);
+        transform: translate(20em, 600px);
         top: 50%;
         left: 50%;
         width: 100px;
         height: 100px;
     }
+    .section-title, .text {
+        transform: translateY(-30px);
+    }
+
+    .intro-sec2 {
+        margin-left: none;
+        margin-right: 30px;
+        padding: 30px;
+    }
+
+    .information h6 {
+        transform: translate(43px, -50px);
+    }
+
+    .intro-sec h2 {
+        transform: translate(-375px, 20px);   
+    }
+    
+    .intro-sec {
+        padding: 20px;
+    }
+
+    
 }
 
 @media (max-width:579px) {
-    .first h6 {
-        transform: translate(33px, 120px);
+    .information h6 {
+        transform: translate(14px, 10px);
     }
 
     .intro-sec2 {
@@ -554,13 +585,53 @@ body {
 
     .intro-sec {
         padding: 20px;
+        margin-bottom: 100px;
     }
 
     .slider .controls {
-        transform: translate(400px, 200px);
+        transform: translate(13em, 600px);
         top: 50%;
         left: 50%;
         width: 100px;
         height: 100px;
+    }
+
+    .section-title, .text {
+        transform: translateY(-70px);
+    }
+
+    .intro-sec h2 {
+        transform: translate(-475px, 20px);   
+    }
+}
+
+@media (max-width:480px) {
+    .first h6 {
+        transform: translate(14px, 120px);
+    }
+
+    .intro-sec2 {
+        margin-left: 20px;
+        padding: 20px;
+    }
+
+    .intro-sec {
+        padding: 20px;
+    }
+
+    .slider .controls {
+        transform: translate(4em, 650px);
+        top: 50%;
+        left: 50%;
+        width: 100px;
+        height: 100px;
+    }
+
+    .section-title, .text {
+        transform: translateY(-70px);
+    }
+
+    .intro-sec h2 {
+        transform: translate(-515px, 20px);   
     }
 }
