--- a/CSS/style.css
+++ b/CSS/style.css
@@ -93,7 +93,7 @@ body {
 	width: 100%;
 	height: 3px;
 	border-radius: 1.5px;
-	background-color: white;
+	background-color: none;
 	top: 10px;
 	left: 0;
 	transition: .4s;
@@ -347,10 +347,8 @@ body {
 	width: 100vw;
 	background: 
     url("../images/ezgif.com-gif-maker.gif") no-repeat;
-	background-size: cover;
-	background-position: 50% 36%;
-	display: flex;
-	flex-direction: column;
+    background-size: cover;
+	background-position: center;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
@@ -371,6 +369,7 @@ body {
     max-width: 700px;
     padding: 2rem;
     z-index: 1;
+    transform: translate(8em, 3em);
 }
 
 .content h2{
@@ -431,3 +430,20 @@ body {
 
 
 /* Media Queries Start */
+@media (max-width:1440px) {
+    html {
+        font-size: 125%;
+    }
+}
+
+@media (max-width:1024px) {
+    html {
+        font-size: 120%;
+    }
+}
+
+@media (max-width:768px) {
+    .menu-wrap {
+        font-size: 120%;
+    }
+}
