--- a/CSS/statistics.css
+++ b/CSS/statistics.css
@@ -147,24 +147,20 @@ body {
 
 .menu > div > div > ul > li > a{
 	text-decoration: none;
-	color: black;
+	color: white;
 	font-weight: 550;
 	text-transform: uppercase;
 	margin: .75rem;
 	transition: .3s;
 	font-size: 30px;
 	display: inline-block;
-    background: white;
+    background: black;
     padding: 10px;
-    border-radius: 20px;
 }
 
 .menu > div > div > ul > li > a:hover{
-    padding: 1px;
-    border-radius: 0.2em;
     background-color: black;
-    color: white;
-    letter-spacing: 2px;
+    color: gray;
 }
 
 .toggler:checked ~ .menu{
@@ -439,17 +435,24 @@ body {
     text-align: center;
 }
 
-.intro-sec2 {
-    margin-top: 20em;
-    justify-content: center;
+.intro-sec2 div{
     align-items: center;
     text-align: center;
+    justify-content: center;
+    color: white;
+    transform: translateY(15em);
+    font-size: 25px;
+    padding: 5px;
 }
 
-.intro-sec2 h2 {
+.intro-sec2 h2{
     align-items: center;
     text-align: center;
     justify-content: center;
+    color: white;
+    transform: translateY(25em);
+    font-size: 20px;
+    padding: 5px;
 }
 
 
@@ -483,6 +486,41 @@ body {
     text-shadow: 1px 1px 8px rgba(0,0,0,0.6);
     padding: 10px;
 }
+
+.towhere .btn {
+    display: inline-block;
+    padding: 10px;
+    border: .2rem solid white;
+    color: white;
+    cursor: pointer;
+    font-size: 15px;
+    border-radius: 3rem;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+    margin-top: 1rem;
+    margin-bottom: 10px;
+}
+
+.towhere .btn::before{
+    content: ' ';
+    position: absolute;
+    top: 0; right: 0;
+    width: 0%;
+    height: 100%;
+    background: white;
+    transition: .3s linear;
+    z-index: -1;
+}
+
+.towhere .btn:hover::before {
+    width: 100%;
+    left: 0;
+}
+
+.towhere .btn:hover{
+    color: gray;
+}
 /* To WherePage Ends */
 
 
@@ -492,21 +530,9 @@ body {
     html {
         font-size: 125%;
     }
-    
-    .intro-sec2 h2 {
-        align-items: center;
-        text-align: center;
-        justify-content: center;
-        margin-right: 8em;
-        padding-top: 20px;
-    }
 
     .slider .controls {
         transform: translate(33.5em, 25em);
-    }
-
-    .intro-sec2 {
-        margin-left: 9em;
     }
 }
 
@@ -523,9 +549,6 @@ body {
         transform: translate(43px, -40px);
     }
 
-    .intro-sec2 {
-        margin-left: 9em;
-    }
 }
 
 @media (max-width: 768px) {
@@ -546,11 +569,6 @@ body {
     .slider .controls > .up {
         transform: translateY(50px);
     }
-
-    .intro-sec2 h2 {
-        margin-left: 9em;
-        padding: 10px;
-    }
 }
 
 @media (max-width: 425px) {
@@ -568,17 +586,9 @@ body {
         transform: translate(-50px, -1px);
     }
 
-    .intro-sec2 h2{
-        transform: translateX(-6em);
-    }
-
     .information h6 {
         transform: translate(38px, -108px);
         font-size: 10px;
-    }
-
-    .intro-sec2 h2 {
-        margin-left: 9em;
     }
 }
 
@@ -605,10 +615,6 @@ body {
 }
 
 @media (max-width:320px) {
-    .intro-sec2 h2{
-        transform: translateX(-7em);
-    }
-
     .wrapper .left .first .section-title, 
     .wrapper .left .second .section-title, 
     .wrapper .left .third .section-title, 
