--- a/CSS/style.css
+++ b/CSS/style.css
@@ -86,11 +86,10 @@ body {
 
 .hamburger>div:after{
 	content: '';
-	position: absolute;
 	width: 100%;
 	height: 3px;
 	border-radius: 1.5px;
-	background-color: none;
+	background-color: white;
 	top: 10px;
 	left: 0;
 	transition: .4s;
@@ -148,31 +147,20 @@ body {
 
 .menu > div > div > ul > li > a{
 	text-decoration: none;
-	color: #fff;
+	color: white;
 	font-weight: 550;
 	text-transform: uppercase;
 	margin: .75rem;
 	transition: .3s;
 	font-size: 30px;
 	display: inline-block;
+    background: black;
+    padding: 10px;
 }
 
 .menu > div > div > ul > li > a:hover{
-    display: inline-block;
-    padding: .8rem 3rem;
-    border: .2rem solid gray; 
-    color: white;
-    cursor: pointer;
-    font-size: 30px;
-    border-radius: 3rem;
-    position: relative;
-    overflow: hidden;
-    z-index: 0;
-    margin-top: 1rem;
-    margin-bottom: 10px;
-    letter-spacing: 4px;
-    background: gray;
-    transition: .1s linear;
+    background-color: black;
+    color: gray;
 }
 
 .toggler:checked ~ .menu{
@@ -238,13 +226,13 @@ body {
 }
 
 .details p {
-    animation: fade-in-after ease-in 4s;
+    animation: fade-in-after ease-in 2s;
 }
 
 .details h1 {
     font-size: 3em;
     color: white;
-    animation: fade-in ease-in 3s;
+    animation: fade-in ease-in 1s;
 }
 
 @keyframes fade-in {
@@ -278,7 +266,7 @@ body {
     z-index: 0;
     margin-top: 1rem;
     margin-bottom: 10px;
-    animation: fade-in-after-p 6s ease-in;
+    animation: fade-in-after-p 3s ease-in;
 }
 
 .btn::before{
